linked button fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class='absolute'>
         <span class="logo"><button data-clipboard-text="jeff.helwig@gmail.com">J Helwig</button></span>
         <div class="left-button">
-          <a href="https://www.linkedin.com/in/jeffhelwig/"><img src="img/in-White-34px-R.png"></a>
+          <a href="https://www.linkedin.com/in/jeffhelwig/"><img src="img/In-White-34px-R.png"></a>
           <a href="https://github.com/jlhelwig"><img src="img/GitHub-Mark-Light-32px.png"></a>
         </div>
       </div>
