--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
   <script src="script.js"></script>
   <!-- <script src="clipboard/dist/clipboard.min.js"></script> -->
+  <script src="https://cdn.optimizely.com/js/8659691719.js"></script>
+
   <title>Jeff Helwig</title>
 </head>
 <body>
