--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class='head-left'>
           <div class='title'>
             <div><p id='name'>Jeff Helwig </p></div>
+            <div id='title'>product manager</div>
             <div id='title'>software developer</div>
           </div>
         </div>
@@ -44,7 +45,7 @@
         </div>
 <!-- Hero -->
       <!-- <div class='body-wrapper'> -->
-        <div class='hero' id='words'><p>I am a full stack web-developer with an extensive business background.</p>
+        <div class='hero' id='words'><p>I am a product manager and web-developer with an extensive business background.</p>
           <p>I love to learn, and I love working with a group toward a common goal.</p>
           <!-- <div>I have built and been part of several top-notch business groups.</div> -->
 
