update href for blackjack

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </a>
             </div>
             <div class='project-bottom-right hover'>
-              <a href='ec2-52-2-43-149.compute-1.amazonaws.com'>
+              <a href='http://ec2-52-2-43-149.compute-1.amazonaws.com/'>
                 <img src="img/blackjack.png" width=300px height=225px alt='did not work'>
               </a>
             </div>
